@@ -514,6 +514,7 @@ PREAMBLE_LY = r'''%%%% Generated by %(program_name)s
 			       (ly:parser-print-score
 				p (ly:music-scorify m p))))
 
+#(define version-seen? #t)
 %(preamble_string)s
 
 \paper {
