@@ -1,3 +1,12 @@
+2004-12-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* scm/output-ps.scm (new-text): don't access t glyph for getting
+	space dimension.
+
+	* ly/init.ly: warn about \version
+
+	* lily/lexer.ll: set version-seen?
+
 2004-12-17  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* scm/output-svg.scm (string->entities): Update.
